--- a/index.html
+++ b/index.html
@@ -1,41 +1,91 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lbuu Website</title>
+        <title>
+            Lea Bujas Portfolio
+        </title>
     </head>
 
     <body>
-        <h1>Lbuu's Website</h1>
-        <h2>I wanna be a developer</h2>
-        <hr />
-
-        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="./assets/images/movie-ranking.png" height="200"/>
-
+        <h1>Lea Bujas</h1>
+        <img src="./assets/images/lepa sam.jpg" height="200">
         <br />
-        <h3><a href="./public/birthday-invite.html">Birthday Party Project</a></h3>
-        <img src="./assets/images/birthday-invite.png" height="200" />
 
+        <h2> Summary</h2>
+        <ul>
+         
+            <li>6 months of hands-on experience with Flutter (UI development for in-car audio systems, embedded
+                systems)</li>
+            <li>6 months of experience with Dart (state management, responsive UI design for embedded systems)</li>
+            <li>4 months of experience with Embedded Linux systems (eLinux, Wayland, cross-compilation with the
+                Yocto Project)</li>
+            <li>Experience in AI-driven software development, focusing on Retrieval-Augmented Generation (RAG)
+                models, database integration, and API optimization.</li>
+        </ul>
         <hr />
 
-        <p><a href="./public/about.html">About Me</a>   <a href="./public/contact.html"> Contact Me</a></p>
+        <h2>Education</h2>
+        <p>Bachelor's degree in Electrical and Computer Engineering (Dipl. Eng. Electrical and Computer
+            Engineering) from the Faculty of Technical Sciences, Novi Sad</p>
+
+        <hr />
+        <h2>Work Experience</h2>    
+
+        <ul>
+            <li><h3>Sotex Solutions, Novi Sad, Serbia – AI Engineer</h3></li>
+            <h4>Project - BKS Retrieval-Augmented Generation (RAG) Model</h4>
+            <h5>January – Februar y 2025</h5>
+            <ul>
+                <li>Designed and implemented a custom RAG pipeline that integrates ChromaDB for optimized data
+                    retrieval.</li>
+                <li>Containerized the system using Docker to ensure seamless deployment and scalability.</li>
+                <li>Optimized embedding retrieval strategies, improving search efficiency and response relevance.</li>
+
+            </ul>
+
+            <li><h3>RT-RK, Novi Sad, Serbia, Embedded Engineer</h3></li>
+            <h4>Project - User Interface for Audio Playback in a Car</h4>
+            <h5>March – Avgust 2024</h5>
+            <ul>
+                <li>Designed and implemented a multi-platform user interface for an in-car audio playback system using the
+                    Flutter UI framework, ensuring compatibility with the Wayland platform and optimizing the app for
+                    seamless operation across eLinux-based embedded systems.</li>
+                <li>Optimized the app’s memory usage and performance, particularly on embedded hardware such as
+                    Telechips, reducing load times and ensuring smooth audio playback across various hardware
+                    configurations.</li>
+                <li>Worked closely with cross-functional teams to ensure successful deployment of the application on
+                    target hardware platforms, utilizing Flutter’s embedded system capabilities alongside Yocto Project tools
+                    for system configuration and optimization.</li>
+                <li>Conducted extensive testing on different embedded devices to ensure consistent user experience and UI
+                        scalability, ensuring the app performed optimally on various screen sizes and hardware setups.</li>
+
+            </ul>
+
+        </ul>
+
+        <hr />
+        <h3>CERTIFICATES</h3>
+        <ul>
+            <li>Cambridge Advanced English – C1 Level</li>
+            <li>French – B2 Level</li>
+            <li>Flutter & Dart - The Complete Guide </li>
+            
+        </ul>
+        <hr />
+        <h3>Other</h3>
+
+        <ul>
+            <li><a href="./public/about.html"> About Me</a></li>
+            <li><a href="./public/contact.html">My Contact Information</a></li>
+        </ul>
+
+        <footer>
+            <small>
+                Copyright © 2025 Lea Bujas. All Rights Reserved.
+            </small>
+        </footer>
     </body>
+
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
